--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": "ak-express",
   "description": "Fast, unopinionated, minimalist web framework",
   "version": "4.17.1",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
@@ -13,7 +13,7 @@
     "Young Jae Sim <hanul@hanul.me>"
   ],
   "license": "MIT",
-  "repository": "expressjs/express",
+  "repository": "ak-vic/ak-express",
   "homepage": "http://expressjs.com/",
   "keywords": [
     "express",
